--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "name": "crypto_wallet",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "4.1.3",
+    "jquery": "^3.6.0",
+    "notify-js-legacy": "^0.4.1",
+    "popper.js": "^1.14.4"
+ },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/hermeshcg/crypto-wallet-curso-rails.git",
+  "author": "hermeshcg <hermescaretta@gmail.com>",
+  "license": "MIT"
 }
